objects/DocGenContractRequest__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>this contains the list of json names that needs to be sent to Residential Lease contract</description>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>this contains the field names from  which we need to pull the value to send as  part of request</description>
        <label>Field API Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Name__c</fullName>
        <description>this contains the object name from which we need to pull the value to send as part of request</description>
        <label>sObject Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>DocGenContractRequest</label>
</CustomObject>